add SC4PAC_JAVA_OPTIONS environment variable to avoid Java 24+ deprecation warnings